--- a/HedgeModManager/Languages/en-US.xaml
+++ b/HedgeModManager/Languages/en-US.xaml
@@ -117,10 +117,11 @@
     <system:String x:Key="OptionsWindowUIError"      >Please select an option!</system:String>
 
     <!-- AboutWindow UI Strings -->
-    <system:String x:Key="AboutWindowUITitle"  >About Hedge Mod Manager</system:String>
-    <system:String x:Key="AboutWindowUILine1"  >A program designed to help people easily load Hedgehog Engine mods.</system:String>
-    <system:String x:Key="AboutWindowUILine2"  >Requires a legally owned version of one of the supported games.</system:String>
-    <system:String x:Key="AboutWindowUICredits">Credits</system:String>
+    <system:String x:Key="AboutWindowUITitle"      >About Hedge Mod Manager</system:String>
+    <system:String x:Key="AboutWindowUILine1"      >A program designed to help people easily load Hedgehog Engine mods.</system:String>
+    <system:String x:Key="AboutWindowUILine2"      >Requires a legally owned version of one of the supported games.</system:String>
+    <system:String x:Key="AboutWindowUICredits"    >Credits</system:String>
+    <system:String x:Key="AboutWindowUITranslators">Translators</system:String>
 
     <!-- ProfileWindow UI Strings -->
     <system:String x:Key="ProfileWindowUITitle"      >Manage Profiles</system:String>
