Improvements and fixes for the mod info window
- If the mod has no author, only the date will be displayed as 'Made on {date}'
- If the mod has no date, only the author will be displayed as 'Made by {author}'
- If the mod has neither an author nor a date, nothing will be displayed.
- The window now resizes to a more optimal width based on the title of the mod and the description contents are wrapped around properly.

--- a/HedgeModManager/Languages/en-AU.xaml
+++ b/HedgeModManager/Languages/en-AU.xaml
@@ -189,6 +189,7 @@
     <!-- Mod Description UI Strings -->
     <system:String x:Key="ModDescriptionUIAbout">About {0}</system:String>
     <system:String x:Key="ModDescriptionUIMadeBy">Made by</system:String>
+    <system:String x:Key="ModDescriptionUIMadeOn">Made on</system:String>
     <system:String x:Key="ModDescriptionUIDate">on</system:String>
 
     <!-- Mod Downloader Strings -->
