--- a/HedgeModManager/Languages/en-UW.xaml
+++ b/HedgeModManager/Languages/en-UW.xaml
@@ -176,6 +176,7 @@
     <system:String xml:space="preserve" x:Key="DialogUIModNewest"      >{0} is awweady u-up to date.</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModUpdate"      >a nyewew vewsion of {0} avaiwabwe! ({1})</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModCancelUpdate">awe you suwe you want to cancew updating?&#x0a;this may cowwupt {0}</system:String>
+    <system:String xml:space="preserve" x:Key="DialogUINoDecompressor" >couwd nyot find 7-zip o-ow winwaw!&#x0a;this i-is wequiwed to extwact t-the mod data&#x0a;&#x0a;pwease make suwe you have e-eithew one instawwed on youw s-system. (⑅˘꒳˘)</system:String>
 
     <!-- Status UI Lang Stuff Strings -->
     <system:String x:Key="StatusUIUpdateCompletedSingular"      >compweted</system:String>
